# PRACT1-tipologia-de-les-dades

./: .gitignore  README.md  pyproject.toml
source/: run_scraper.py  scrapy.cfg
source/pisos_scraper/: items.py  middlewares.py  pipelines.py  settings.py
source/pisos_scraper/spiders/: pisos_spider.py
